test/tests/stages/9_functions/valid/no_arguments/forward_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(foo)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  )
  ;
  }
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(3)
  ;
  }
