test/tests/stages/9_functions/invalid_declarations/redefine_parameter.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  {
  int
  identifier(a)
  =
  const int(5)
  ;
  return
  identifier(a)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(3)
  )
  ;
  }
